<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="clip_horizontal"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="359dp"
        android:layout_height="204dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <EditText
        android:id="@+id/emailadress"
        android:layout_width="314dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:hint="@string/Registeren_emailadress"
        android:inputType="textWebEmailAddress"
        android:padding="5dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/wachtwoord"
        android:layout_width="314dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border"
        android:hint="@string/Registeren_wachtwoord"
        android:inputType="textPassword"
        android:padding="5dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailadress" />

    <EditText
        android:id="@+id/confirewachtwoord"
        android:layout_width="314dp"
        android:layout_height="43dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/border"
        android:hint="@string/Registeren_confire_wachtwoord"

        android:inputType="textPassword"
        android:padding="5dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wachtwoord" />

    <Button
        android:id="@+id/Registratie_Button"
        android:layout_width="227dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_button"
        android:fontFamily="@font/sen_bold"
        android:text="@string/Registeren"
        android:textColor="@color/transparent"

        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirewachtwoord" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registratie_Button"
        app:layout_constraintVertical_bias="0.931" />


</androidx.constraintlayout.widget.ConstraintLayout>